--- a/bifeldy-sd3-wf-452/Panels/MainPanel.resx
+++ b/bifeldy-sd3-wf-452/Panels/MainPanel.resx
@@ -461,6 +461,9 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="timerQueue.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>120, 17</value>
+    <value>122, 17</value>
+  </metadata>
+  <metadata name="reConnectMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>239, 17</value>
   </metadata>
 </root>
